# python-sht31

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  pytest.toml  python-sht31.code-workspace  requirements-dev.txt  requirements.txt  sht31-python.code-workspace
.github/workflows/: main.yml  release.yml  tests.yml
examples/: example.py
sht31/: __init__.py  constants.py  exceptions.py  instance.py  sht31.py
simulation/: smbus.py
tests/: test_sht31.py
