[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sht31"
version = "0.1.0"
authors = [
  { name="prdktntwcklr" },
]
description = "Python library for the SHT31 temperature and humidity sensor."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prdktntwcklr/python-sht31"
