[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sht31"
version = "0.1.1"
authors = [
  { name="prdktntwcklr" },
]
description = "Python library for the SHT31 temperature and humidity sensor."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prdktntwcklr/python-sht31"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pre_commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0"
]
