[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sht31"
version = "0.1.1"
authors = [
  { name="prdktntwcklr" },
]
description = "Python library for the SHT31 temperature and humidity sensor."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prdktntwcklr/python-sht31"

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "build>=1.2.2",
    "mypy>=1.19.1",
    "pre_commit>=4.1.0",
    "pylint>=4.0.4",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0"
]

[tool.mypy]
disallow_untyped_defs = true
